# rails

./: .cursorrules  .gitignore  .gitmodules  AI_WORKFLOW.md  BREAKING_CHANGES.md  CLAUDE.md  GIT_HOOKS_README.md  LEDGER_TESTING_GUIDE.md  PERFORMANCE_NOTES.md  QUICK_START.md  RUN_SERVICES.md  SECURITY.md  SERVICE_SETUP_GUIDE.md  TESTING_GUIDE.md  TODO.md  start_all_services.sh  test-api-key-flow.sh  test-hook.txt  test-hooks.txt  test-organizational-hierarchy.sh  test-user-creation-flow.sh  test_business_registration_e2e.sh  test_e2e_ledger_flow.sh  test_ledger_constraints.rb  todo.md
mvp/api/accounts/: .dockerignore  .env.example  .env.railway  ARCHITECTURE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  PROJECT_STRUCTURE.md  README.md  SUMMARY.md  bigdecimal_addition.txt  build.rs  railway.toml  run-dev.sh  run_pending_migration.sh  test-create-account.sh
mvp/api/accounts/.sqlx/: query-b1c311f7d59ae61ffd92d0705a4e4d37c3ed83ff93d72468d6446d829151a6b7.json
mvp/api/accounts/migrations/: 20240101000001_create_accounts_table.sql  20240101000002_create_recurring_payments_table.sql  20240101000004_create_transactions_table.sql  20240101000006_add_organizational_hierarchy_to_accounts.sql  20260126000000_add_performance_indexes.sql  20260127000000_change_environment_default_to_sandbox.sql  20260127000001_backfill_null_environments.sql  20260127000002_add_environment_composite_indexes.sql
mvp/api/accounts/migrations_accounts/: 20240101000003_create_fixed_savings_plans_table.sql  20240101000005_add_org_env_to_accounts.sql  20240101000008_add_admin_user_id_to_accounts.sql  20260122000007_intent_transactions_and_remove_balance.sql  20260124000001_add_transaction_kind_to_transactions.sql  20260127000001_add_environment_to_transactions.sql
mvp/api/accounts/proto/: ledger.proto
mvp/api/accounts/src/: ledger.rs  ledger_grpc.rs  main.rs
mvp/api/accounts/src/config/: settings.rs
mvp/api/accounts/src/errors/: app_error.rs
mvp/api/accounts/src/grpc/: accounts.rs  mod.rs
mvp/api/accounts/src/handlers/: accounts.rs  health.rs  mod.rs  transactions.rs
mvp/api/accounts/src/middleware/: mod.rs
mvp/api/accounts/src/models/: account.rs  fixed_savings_plan.rs  mod.rs  recurring_payment.rs  transaction.rs
mvp/api/accounts/src/nats/: mod.rs
mvp/api/accounts/src/repositories/: account_repository.rs  fixed_savings_repository.rs  mod.rs  recurring_payment_repository.rs  transaction_repository.rs
mvp/api/accounts/src/routes/: api.rs  mod.rs
mvp/api/accounts/src/services/: account_service.rs  mod.rs  transaction_retry.rs  transaction_service.rs
mvp/api/accounts/src/utils/: account_number.rs  mod.rs
mvp/api/users/: .env.example  .gitignore  .sqlx  Cargo.toml  Dockerfile  README.md  README_LOCAL_SETUP.md  build.rs  get_production_users.sql  pom.xml  railway.toml  run-dev.bat  run-dev.sh  run-local.sh  test-create-user.sh
mvp/api/users/config/keys/: private_key.pem  public_key.pem
mvp/api/users/migrations/: 20260119000100_init_users_service.sql  20260119000200_add_user_names.sql  20260120000100_api_keys_business_and_hash.sql  20260120000200_add_user_created_by.sql  20260126000000_add_performance_indexes.sql  20260127000000_password_reset_tokens.sql  20260129000000_beta_applications.sql
mvp/api/users/proto/: accounts.proto
mvp/api/users/src/: auth.rs  config.rs  db.rs  email.rs  error.rs  grpc.rs  main.rs  models.rs  nats.rs
mvp/api/users/src/routes/: apikey.rs  auth.rs  beta.rs  health.rs  (+5 more)
(+382 files in other folders)
