[package]
name = "users_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-rustls", "migrate"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
argon2 = { version = "0.5", features = ["password-hash"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Sentry error tracking and performance monitoring
sentry = { version = "0.32", features = ["tracing", "tower"] }
sentry-tracing = "0.32"

tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
dotenvy = "0.15.7"
anyhow = "1.0.100"
base64 = "0.22.1"
rand = "0.9.2"
config = "0.15.19"
hmac = "0.12"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
tonic-build = "0.12"